@@ -12,11 +12,7 @@ if((isset($title))&&(!empty($title))&&(isset($start))&&(!empty($start))&&(isset(
                 $description=utf8_decode(($_POST["desc"]));    
             }
 
-            
-            $link = mysql_connect('localhost','cultibox','cultibox');
-            if (!$link) { die('Could not connect: ' . mysql_error()); }
-            mysql_select_db('cultibox');
-
+            $db = new PDO('mysql:host=localhost;dbname=cultibox;charset=utf8', 'cultibox', 'cultibox');
             if((isset($description))&&(!empty($description))) {
             $sql = <<<EOF
 INSERT INTO `calendar`(`Title`,`StartTime`, `EndTime`,`Description`,`Color`,`External`) VALUES("{$title}", "{$start}", "{$end}", "{$description}", "{$color}","0");
@@ -27,7 +23,8 @@ EOF;
 INSERT INTO `calendar`(`Title`,`StartTime`, `EndTime`,`Color`,`External`) VALUES("{$title}", "{$start}", "{$end}", "{$color}","0");
 EOF;
             }
-        $res = mysql_query($sql);
+            $db->exec("$sql");
+            $db=null;
 }
 
 ?>
